==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Changelog
=========

 - Fixed a regression introduced in 1.1.0 that caused statements like ``COPY t
   TO '/invalid/directory/'`` to get stuck instead of resulting in an error.